@@ -1,0 +1,21 @@
+$Id$
+
+Read http://deuce.doc.wustl.edu/bugzilla/show_bug.cgi?id=2925 for
+more details.
+
+This test uses dscp over both IPv4 and IPv6 and basically there is
+no way to check whether dscp enabled or not except for using
+-ORBDebugLevel 10. So, do it manually if you want to see it.
+
+_Expected successful result_:
+
+D:\devel\DOCGroup\check\tao_ipv6\TAO\orbsvcs\tests\Bug_2925_Regression>run_test.pl
+Activated as <IOR:00000000000000010000000000000001000000030000004c000102000000000f3233302e3235352e3235352e333300001ce20000000000010000002700000024000100000000000d63646d776674646f6d61696e0033302e000000000000000100000000>
+00<<; 00>>; 01<<; 01>>; 02<<; 02>>; 03<<; 03>>; 04<<; 04>>; 05<<; 05>>; 06<<; 06>>; 07<<; 07>>; 08<<; 09<<; 09>>; 08>>; 10<<; 10>>; 11<<; 11>>; 12<<; 12>>; 13<<; 13>>; 14<<; 14>>; 15<<; 15>>; 16<<; 16>>; 17<<; 17>>; 18<<; 18>>; 19<<; 19>>; 20<<; 20>>; 21<<; 21>>; 23<<; 23>>; 22<<; 22>>; 24<<; 24>>; 25<<; 25>>; 26<<; 26>>; 27<<; 27>>; 28<<; 28>>; 29<<; 29>>; 30<<; 30>>; 32<<; 32>>; 31<<; 31>>; 33<<; 33>>; 34<<; 34>>; 35<<; 35>>; 36<<; 36>>; 37<<; 37>>; 38<<; 38>>; 39<<; 39>>; 41>>; 40>>; 42>>; 43>>; 44>>; 45>>; 46>>; 47>>; 48>>; 49>>; 50>>; 51>>; 52>>; 53>>; 54>>; 55>>; 56>>; 57>>; 58>>; 59>>; 60>>; 61>>; 62>>; 63>>; 64>>; 65>>; 66>>; 67>>; 68>>; 69>>; 70>>; 71>>; 72>>; 73>>; 74>>; 75>>; 76>>; 77>>; 78>>; 79>>; 80>>; 81>>; 82>>; 83>>; 84>>; 85>>; 86>>; 87>>; 88>>; 89>>; 90>>; 91>>; 92>>; 93>>; 94>>; 95>>; 96>>; 97>>; 98>>; 99>>; 40<<; 41<<; 42<<; 43<<; 44<<; 45<<; 46<<; 47<<; 48<<; 49<<; 50<<; 51<<; 52<<; 53<<; 54<<; 55<<; 56<<; 57<<; 58<<; 59<<; 60<<; 
+ (28527|1) client finished successfully..
+61<<; 62<<; 63<<; 64<<; 65<<; 66<<; 67<<; 68<<; 69<<; 70<<; 71<<; 72<<; 73<<; 74<<; 75<<; 76<<; 77<<; 78<<; 79<<; 80<<; 81<<; 82<<; 83<<; 84<<; 85<<; 86<<; 87<<; 88<<; 89<<; 90<<; 91<<; 92<<; 93<<; 94<<; 95<<; 96<<; 97<<; 98<<; 99<<; 
+ (28526|1) server finished successfully..
+
+_Expected regression result_:
+
+Any error message would mean that something went wrong.
