@@ -1,3 +1,12 @@
+Mon May 21 12:01:30 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>
+
+        * orbsvcs/tests/Bug_2925_Regression/run_test_ipv6.pl:
+        * orbsvcs/tests/Bug_2925_Regression/run_test.pl:
+        * orbsvcs/tests/Bug_2925_Regression/README:
+          On some test systems the timeout for client and server
+          was too short. So, extended the timeout and added README.
+          Bug#2925.
+
 Thu May 17 16:38:23 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * MPC/config/taoidldefaults.mpb:
